fix(common): make unexpected color icons visible (#7)
* fix(common): make unexpected color icons visible

* refactor(common): refactor by review

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -92,6 +92,11 @@
     width: 100%;
     height: 100%;
   }
+
+  &--shadow {
+    filter:
+      drop-shadow(0 1px 1px var(--color-component-text-light));
+  }
 }
 
 .dz-form {
